# sqlike

./: .gitignore  README.md
src/: BigQ.cpp  BigQ.h  CMakeLists.txt  Comparison.cpp  Comparison.h  ComparisonEngine.cpp  ComparisonEngine.h  Config.h  Const.h  DBFile.cpp  DBFile.h  File.cpp  File.h  Function.cpp  Function.h  GTest.cpp  GenericDBFile.h  Heap.cpp  Heap.h  Page.cpp  Page.h  ParseTree.h  Parser.y  ParserFunc.y  Pipe.cpp  Pipe.h  Record.cpp  Record.h  RelationalOp.cpp  RelationalOp.h  Scanner.l  ScannerFunc.l  Schema.cpp  Schema.h  Sorted.cpp  Sorted.h  TwoWayList.cpp  TwoWayList.h  a1-main.cpp  a1-test.cpp  (+8 more)
test-cases/: Test1.txt  Test2.txt  Test3.txt  Test4.txt  output1.txt  run.sh
